<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:foreground="@drawable/ic_baseline_close_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:text="@string/filter_options"
                android:textColor="@color/black"
                android:textSize="@dimen/default_big_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/done"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@color/red"
                android:fontFamily="@font/alfa_slab_one"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_space_between_words"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/episode_code"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/select_code"
            app:boxStrokeColor="@color/red"
            app:hintTextColor="@color/red">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
